--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,8 @@ h1, .h1 {
   font-size: 2.5rem; }
 
 h2, .h2 {
-  font-size: 2rem; }
+  font-size: 2rem; 
+  font-weight: 600;}
 
 h3, .h3 {
   font-size: 1.75rem; }
@@ -8011,10 +8012,11 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #ffd369; }
+  color: #343a69;
+  font-weight: 600; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #ffd369;
+    color: #343a69;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
